[project]
name = "grpo-llm"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "torch==2.2.2",
    "transformers>=4.44.0",
    "accelerate==0.34.2",
    "numpy<2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"