[project]
name = "grpo-llm"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "torch==2.2.2",
    "transformers>=4.33.0",
    "accelerate>=0.23.0",
    "numpy<2.0",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "peft>=0.17.1",
    "trl>=0.7.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
